Homework #1: Pet trainer (part 2)/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/lx/w5y_1_tj1rv34d7vb1mbj_w40000gn/T/AppTranslocation/E23F9496-7FB0-4DCA-B74B-42F8FC854F4C/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/alexandraguillen/Homework #0: Pet trainer (part 1)
-d
/Users/alexandraguillen/Homework #0: Pet trainer (part 1)/doc
-encoding
UTF-8
-charset
UTF-8
/Users/alexandraguillen/Homework #0: Pet trainer (part 1)/PetCreator.java
<---- end of javadoc command ---->
Loading source file /Users/alexandraguillen/Homework #0: Pet trainer (part 1)/PetCreator.java...
Constructing Javadoc information...
/Users/alexandraguillen/Homework #0: Pet trainer (part 1)/PetCreator.java:4: error: cannot find symbol
    static void printPet(Pet p){
                         ^
  symbol:   class Pet
  location: class PetCreator
1 error
